# kafka_fundamentals

./: Cargo.toml  Makefile  docker-compose.yml
labs/: recap.md
labs/lab1_produce_consume/: Cargo.toml  README.md  config_keyed.toml  config_roundrobin.toml
labs/lab2_offsets_manual/: Cargo.toml  README.md
labs/lab3_consumer_groups/: Cargo.toml  README.md
labs/lab4_delivery_semantics/: Cargo.toml  README.md
shared/: Cargo.toml  config.toml
shared/src/: config.rs  event.rs  lib.rs  record.rs
