[package]
name = "lab4_delivery_semantics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
rdkafka = "0.38.0"
shared = { path = "../../shared" }